--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.002   2021-06-09  Released-By: PERLANCAR; Urgency: low
+
+	- Fix Abstract.
+
+
 0.001   2018-05-26  Released-By: PERLANCAR
 
         - First release.
